--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,13 @@
-<div class="row col-md-6">
+<div class="col-md-11 home-missionStatementBody">
+  <p class="home-MissionStateMentHead">Mission Statement:</p>
+  Our mission is to empower people to reach their highest potetnial. I am 100%
+  focused on helping you <b>OVERCOME</b> life's toughest challenges and stuff
+</div>
+<br />
+<br />
+<br />
+<div class="row col-md-7">
+  <br />
   <p>
     My Approach No one form of therapy fits everyone. We all have our own unique
     needs and personalities. I get to know the people I am working with so that
@@ -24,7 +33,9 @@
     together to achieve the results you are seeking. ​
   </p>
 </div>
-<div class="col-md-6">
+<div class="col-md-5 mr-3">
+  <br />
+  <br />
   <img
     src="https://www.arborday.org/images/hero/medium/hero-green-leaves-in-sunlight.jpg"
     alt="placeholder beach"
@@ -40,18 +51,6 @@
   />
 </div>
 
-<!--
-  <div class="col-md-3">
-
-    <div class="card" style="width: 18rem;">
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">You is Kind</li>
-        <li class="list-group-item">You is Smart</li>
-        <li class="list-group-item">You is Important</li>
-      </ul>
-    </div>
-  </div>
--->
 <div class=" col-md-6 ">
   <br />
   <div class="card bg-info">
@@ -60,4 +59,4 @@
     </div>
   </div>
 </div>
-<app-home-carousel></app-home-carousel>
+<!-- <app-home-carousel></app-home-carousel> -->
