--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,14 @@
 <div>
-  <div class="col-md-8 col-md-offset-5">
-    <img src="assets/img/paperCranes.png" alt="logo" height="150" width="175" />
-    <span class="col-md-offset-6 phoneNumber">(213) 214-2925</span>
-    <!--
-      <span class="address"
-        >300 South Beverly Dr. Suite 301 Beverly Hills, CA 90212</span
-      >
-    -->
+  <div class="col-md-1 col-md-offset-4 col-sm-1 sol-sm-offset-4">
+    <img
+      src="assets/img/paperCranes.png"
+      alt="paper cranes counseling"
+      height="150"
+      width="175"
+    />
+  </div>
+  <div class="col-md-5 col-md-offset-2">
+    <app-business-information></app-business-information>
   </div>
 
   <div class="background"><app-header></app-header></div>
@@ -22,5 +24,5 @@
     }
   </style>
 
-  <div class="footer"><p>Copyright 2018</p></div>
+  <div class="footer"><p>Paper Cranes Copyright 2018</p></div>
 </div>
