--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,25 @@
-<div>
-  <div class="col-md-1 col-md-offset-4 col-sm-1 sol-sm-offset-4">
-    <img
-      src="assets/img/paperCranes.png"
-      alt="paper cranes counseling"
-      height="150"
-      width="175"
-    />
-  </div>
-  <div class="col-md-5 col-md-offset-2">
-    <app-business-information></app-business-information>
-  </div>
+<!--
+  <img
+    src="assets/img/paperCranes.png"
+    alt="paper cranes counseling"
+    height="150"
+    width="175"
+  />
+-->
 
-  <div class="background"><app-header></app-header></div>
-  <style>
-    .footer {
-      position: relative;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      background-color: rgb(155, 182, 241);
-      color: white;
-      text-align: center;
-    }
-  </style>
+<div class="col-md-5 col-md-offset-2"></div>
 
-  <div class="footer"><p>Paper Cranes Copyright 2018</p></div>
-</div>
+<div class="background"><app-header></app-header></div>
+<style>
+  .footer {
+    position: relative;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(155, 182, 241);
+    color: white;
+    text-align: center;
+  }
+</style>
+
+<div class="footer"><p>Paper Cranes Copyright 2018</p></div>
