--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,62 +1,45 @@
-<div class="col-md-11 home-missionStatementBody">
-  <p class="home-MissionStateMentHead">Mission Statement:</p>
-  Our mission is to empower people to reach their highest potetnial. I am 100%
-  focused on helping you <b>OVERCOME</b> life's toughest challenges and stuff
-</div>
-<br />
-<br />
-<br />
-<div class="row col-md-7">
+<div>
+  <div class="col-md-11 home-missionStatementBody">
+    <p class="home-MissionStateMentHead">Mission Statement:</p>
+    Our mission is to empower people to reach their highest potetnial. I am 100%
+    focused on helping you <b>OVERCOME</b> life's toughest challenges and stuff
+  </div>
   <br />
-  <p>
-    My Approach No one form of therapy fits everyone. We all have our own unique
-    needs and personalities. I get to know the people I am working with so that
-    we can co-create a plan that is right for them. No matter what style or
-    methods used, I am always active and engaged. ​<br />
-    <br />
-    My Counseling Psychology program was based in the theoretical framework of
-    Depth Psychology. Depth Psychology pays close attention to how the
-    unconscious mind influences how we experience life. Therapists who have been
-    trained in Depth theory investigate unconscious motivations and drivers. It
-    is also closely related to the psychodynamic approach. ​ <br />
-    <br />
-    Once we understand where our behaviors come from, we can often gain better
-    control over them or modify them if desired. I then work with clients by
-    drawing from modalities known as behavioral therapies (Cognitivey Behavioral
-    Therapy and Rational Emotive Behavioral Therapy), Narrative Therapy,
-    Emotionally Focused Therapy, just to name a few. These help to modify
-    behaviors and understand emotions that may be attached to them. ​<br />
-    <br />I also draw from my years of entrepreneurial and business experience
-    to help those who are struggling to balance their career and life. I have
-    lived the pressures and challenges that can easily rob us of our energy, and
-    prevent us from enjoying our accomplishments. ​ Most importantly, we work
-    together to achieve the results you are seeking. ​
-  </p>
-</div>
-<div class="col-md-5 mr-3">
-  <br />
-  <br />
-  <img
-    src="https://www.arborday.org/images/hero/medium/hero-green-leaves-in-sunlight.jpg"
-    alt="placeholder beach"
-    height="200"
-    width="435"
-  />
-  <hr />
-  <img
-    src="https://www.atlantisbahamas.com/media/Things%20To%20Do/Water%20Park/Beaches/Hero/Experiences_Beach.jpg"
-    alt="placeholder beach"
-    height="200"
-    width="435"
-  />
-</div>
-
-<div class=" col-md-6 ">
-  <br />
-  <div class="card bg-info">
-    <div class="card-body text-center">
-      <p class="card-text">You is kind you is smart you is important</p>
+  <div id="row1">
+    <div id="column1">
+      <div class="col-md-12 ml-2">
+        <br />
+        <p>
+          My Approach No one form of therapy fits everyone. We all have our own
+          unique needs and personalities. I get to know the people I am working
+          with so that we can co-create a plan that is right for them. No matter
+          what style or methods used, I am always active and engaged. ​<br />
+          <br />
+          My Counseling Psychology program was based in the theoretical
+          framework of Depth Psychology. Depth Psychology pays close attention
+          to how the unconscious mind influences how we experience life.
+          Therapists who have been trained in Depth theory investigate
+          unconscious motivations and drivers. It is also closely related to the
+          psychodynamic approach. ​ <br />
+          <br />
+          Once we understand where our behaviors come from, we can often gain
+          better control over them or modify them if desired. I then work with
+          clients by drawing from modalities known as behavioral therapies
+          (Cognitivey Behavioral Therapy and Rational Emotive Behavioral
+          Therapy), Narrative Therapy, Emotionally Focused Therapy, just to name
+          a few. These help to modify behaviors and understand emotions that may
+          be attached to them. ​<br />
+          <br />I also draw from my years of entrepreneurial and business
+          experience to help those who are struggling to balance their career
+          and life. I have lived the pressures and challenges that can easily
+          rob us of our energy, and prevent us from enjoying our
+          accomplishments. ​ Most importantly, we work together to achieve the
+          results you are seeking. ​
+        </p>
+      </div>
+    </div>
+    <div id="column2" class="col-md-6">
+      <div><app-home-carousel></app-home-carousel></div>
     </div>
   </div>
 </div>
-<app-home-carousel></app-home-carousel>
