--- a/src/app/resources/resources.component.html
+++ b/src/app/resources/resources.component.html
@@ -1,3 +1,263 @@
-<p>
-  resources works!
-</p>
+<div>
+  <br />
+  <div id="row1">
+    <div id="column1" class="col-md-6">
+      <div>
+        <button
+          class="offset-4 btn btn-primary mb-2"
+          (click)="showHotline = !showHotline"
+        >
+          Hotlines
+        </button>
+        <div *ngIf="showHotline" class="info">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Organization</th>
+                <th scope="col">Phone</th>
+                <th scope="col">Email</th>
+              </tr>
+            </thead>
+            <tbody class="overflow">
+              <tr
+                title="Suicide hotline: for those in suicidal crisis or know someone who is in crisis"
+              >
+                <td>LifeLine</td>
+                <td>800-273-8255</td>
+                <td>N/A</td>
+              </tr>
+              <tr title="Suicide hotline: Spanish">
+                <td>Spanish LifeLine</td>
+                <td>888-628-9454</td>
+                <td>N/A</td>
+              </tr>
+              <tr>
+                <td>LA County Department of Mental Health</td>
+                <td>800-854-7771</td>
+                <td>N/A</td>
+              </tr>
+              <tr
+                title="Suicide hotline: for those in suicidal crisis or know someone who is in crisis"
+              >
+                <td>LifeLine</td>
+                <td>800-273-8255</td>
+                <td>N/A</td>
+              </tr>
+              <tr
+                title="Suicide hotline: for those in suicidal crisis or know someone who is in crisis"
+              >
+                <td>LifeLine</td>
+                <td>800-273-8255</td>
+                <td>N/A</td>
+              </tr>
+              <tr
+                title="Suicide hotline: for those in suicidal crisis or know someone who is in crisis"
+              >
+                <td>LifeLine</td>
+                <td>800-273-8255</td>
+                <td>N/A</td>
+              </tr>
+              <tr
+                title="Suicide hotline: for those in suicidal crisis or know someone who is in crisis"
+              >
+                <td>LifeLine</td>
+                <td>800-273-8255</td>
+                <td>N/A</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div id="column2" class="col-md-6">
+      <div>
+        <div>
+          <button
+            class="offset-4 btn btn-info mb-2"
+            (click)="showEmergencyNumbers = !showEmergencyNumbers"
+          >
+            Emergency Numbers
+          </button>
+          <div *ngIf="showEmergencyNumbers" class="info">
+            <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th scope="col">Organizationsss</th>
+                  <th scope="col">Phone</th>
+                  <th scope="col">Email</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr
+                  title="Suicide hotline: for those in suicidal crisis or know someone who is in crisis"
+                >
+                  <td>LAPD Dispatch</td>
+                  <td>213-928-8223</td>
+                  <td>N/A</td>
+                </tr>
+                <tr title="Suicide hotline: Spanish">
+                  <td>Spanish LifeLine</td>
+                  <td>888-628-9454</td>
+                  <td>N/A</td>
+                </tr>
+                <tr>
+                  <td>LA County Department of Mental Health</td>
+                  <td>800-854-7771</td>
+                  <td>N/A</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="row1">
+    <div id="column1" class="col-md-6">
+      <div>
+        <p class="offset-4"><b>HOTLINES</b></p>
+        <div class="info">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Organization</th>
+                <th scope="col">Phone</th>
+                <th scope="col">Email</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr
+                title="Suicide hotline: for those in suicidal crisis or know someone who is in crisis"
+              >
+                <td>LifeLine</td>
+                <td>800-273-8255</td>
+                <td>N/A</td>
+              </tr>
+              <tr title="Suicide hotline: Spanish">
+                <td>Spanish LifeLine</td>
+                <td>888-628-9454</td>
+                <td>N/A</td>
+              </tr>
+              <tr>
+                <td>LA County Department of Mental Health</td>
+                <td>800-854-7771</td>
+                <td>N/A</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div id="column2" class="col-md-6">
+      <div>
+        <div>
+          <p class="offset-4"><b>HOTLINES</b></p>
+          <div class="info">
+            <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th scope="col">Organization</th>
+                  <th scope="col">Phone</th>
+                  <th scope="col">Email</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr
+                  title="Suicide hotline: for those in suicidal crisis or know someone who is in crisis"
+                >
+                  <td>LifeLine</td>
+                  <td>800-273-8255</td>
+                  <td>N/A</td>
+                </tr>
+                <tr title="Suicide hotline: Spanish">
+                  <td>Spanish LifeLine</td>
+                  <td>888-628-9454</td>
+                  <td>N/A</td>
+                </tr>
+                <tr>
+                  <td>LA County Department of Mental Health</td>
+                  <td>800-854-7771</td>
+                  <td>N/A</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="row1">
+    <div id="column1" class="col-md-6">
+      <div>
+        <p class="offset-4"><b>HOTLINES</b></p>
+        <div class="info">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Organization</th>
+                <th scope="col">Phone</th>
+                <th scope="col">Email</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr
+                title="Suicide hotline: for those in suicidal crisis or know someone who is in crisis"
+              >
+                <td>LifeLine</td>
+                <td>800-273-8255</td>
+                <td>N/A</td>
+              </tr>
+              <tr title="Suicide hotline: Spanish">
+                <td>Spanish LifeLine</td>
+                <td>888-628-9454</td>
+                <td>N/A</td>
+              </tr>
+              <tr>
+                <td>LA County Department of Mental Health</td>
+                <td>800-854-7771</td>
+                <td>N/A</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div id="column2" class="col-md-6">
+      <div>
+        <div>
+          <p class="offset-4"><b>HOTLINES</b></p>
+          <div class="info">
+            <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th scope="col">Organization</th>
+                  <th scope="col">Phone</th>
+                  <th scope="col">Email</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr
+                  title="Suicide hotline: for those in suicidal crisis or know someone who is in crisis"
+                >
+                  <td>LifeLine</td>
+                  <td>800-273-8255</td>
+                  <td>N/A</td>
+                </tr>
+                <tr title="Suicide hotline: Spanish">
+                  <td>Spanish LifeLine</td>
+                  <td>888-628-9454</td>
+                  <td>N/A</td>
+                </tr>
+                <tr>
+                  <td>LA County Department of Mental Health</td>
+                  <td>800-854-7771</td>
+                  <td>N/A</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
