--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,54 +1,1 @@
-<div>
-  <div class="col-md-offset-1">
-    <div class="row">
-      <div class="col-md-8 navbar-styles col-md-offset-1">
-        <hr />
-        <ul class="nav nav-tabs">
-          <li
-            role="presentation"
-            routerLinkActive="active"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
-            <a routerLink="/home">Home</a>
-          </li>
-          <li role="presentation" routerLinkActive="active">
-            <a routerLink="/aboutMe">About Me</a>
-          </li>
-          <li role="presentation" routerLinkActive="active" class="dropdown">
-            <a>Specialties</a>
-            <div class="dropdown-content">
-              <a routerLink="/specialties">CBT</a> <a href="#">DBT</a>
-              <a href="#">Option 3</a>
-            </div>
-          </li>
-          <li role="presentation" routerLinkActive="active">
-            <a routerLink="/resources">Resources</a>
-          </li>
-          <li role="presentation" routerLinkActive="active">
-            <a routerLink="/faq">FAQ</a>
-          </li>
-          <li role="presentation" routerLinkActive="active">
-            <a routerLink="/blog">Blog</a>
-          </li>
-
-          <li role="presentation" routerLinkActive="active">
-            <a [routerLink]="['/contactMe']">Contact Me</a>
-          </li>
-          <li role="presentation" routerLinkActive="active">
-            <a
-              href="https://www.therapyportal.com/p/papercranescounseling/"
-              target="_blank"
-              >Client Portal</a
-            >
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12 col-sm-10 col-md-12">
-        <br />
-        <router-outlet></router-outlet>
-      </div>
-    </div>
-  </div>
-</div>
+<app-navbar></app-navbar>
