--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -8,3 +8,15 @@
   color: rgb(39, 51, 158);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
+
+#row1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+#column1 {
+  display: flex;
+  flex-direction: column;
+  font-size: 110%;
+}
